Fix the contrast on the score so that it's readable

--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ div {
   /*border: 1px dashed purple;*/
 
   font-family: 'Righteous', cursive;
-  color: slateblue;
+  color: white;
   font-size: 18px;
   text-shadow: 3px 4px 5px darkslategrey;
 
